--- a/MC-Dex/MC-Dex.csproj
+++ b/MC-Dex/MC-Dex.csproj
@@ -146,5 +146,8 @@
   <ItemGroup>
     <Resource Include="img\bloc_terre.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="img\background2.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
