--- a/MC-Dex/MC-Dex.csproj
+++ b/MC-Dex/MC-Dex.csproj
@@ -89,6 +89,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="pageObjet.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="menuUC.xaml.cs">
@@ -96,6 +100,9 @@
     </Compile>
     <Compile Include="pageAjouter.xaml.cs">
       <DependentUpon>pageAjouter.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="pageObjet.xaml.cs">
+      <DependentUpon>pageObjet.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
