amélioration ajout stat

--- a/MC-Dex/MC-Dex.csproj
+++ b/MC-Dex/MC-Dex.csproj
@@ -58,14 +58,11 @@
     <Compile Include="boutonAjoutUC.xaml.cs">
       <DependentUpon>boutonAjoutUC.xaml</DependentUpon>
     </Compile>
-    <Compile Include="nomGridStatUC.xaml.cs">
-      <DependentUpon>nomGridStatUC.xaml</DependentUpon>
+    <Compile Include="ligneGridStatUC.xaml.cs">
+      <DependentUpon>ligneGridStatUC.xaml</DependentUpon>
     </Compile>
     <Compile Include="textBoxUC.xaml.cs">
       <DependentUpon>textBoxUC.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="valeurGridStatUC.xaml.cs">
-      <DependentUpon>valeurGridStatUC.xaml</DependentUpon>
     </Compile>
     <Page Include="boutonAjoutUC.xaml">
       <SubType>Designer</SubType>
@@ -80,6 +77,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="itemUC.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="ligneGridStatUC.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -108,10 +109,6 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="nomGridStatUC.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
     <Page Include="pageAjouter.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -121,10 +118,6 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="textBoxUC.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="valeurGridStatUC.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
