--- a/MC-Dex/MC-Dex.csproj
+++ b/MC-Dex/MC-Dex.csproj
@@ -64,8 +64,8 @@
     <Compile Include="textBoxBaseUC.xaml.cs">
       <DependentUpon>textBoxBaseUC.xaml</DependentUpon>
     </Compile>
-    <Compile Include="textBoxDescriptionUC.xaml.cs">
-      <DependentUpon>textBoxDescriptionUC.xaml</DependentUpon>
+    <Compile Include="textBoxCraftUC.xaml.cs">
+      <DependentUpon>textBoxCraftUC.xaml</DependentUpon>
     </Compile>
     <Compile Include="textBoxStatistiqueUC.xaml.cs">
       <DependentUpon>textBoxStatistiqueUC.xaml</DependentUpon>
@@ -130,7 +130,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="textBoxDescriptionUC.xaml">
+    <Page Include="textBoxCraftUC.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
