--- a/MC-Dex/MC-Dex.csproj
+++ b/MC-Dex/MC-Dex.csproj
@@ -61,6 +61,7 @@
     <Compile Include="grilleCraftUC.xaml.cs">
       <DependentUpon>grilleCraftUC.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Item.cs" />
     <Compile Include="ligneGridStatUC.xaml.cs">
       <DependentUpon>ligneGridStatUC.xaml</DependentUpon>
     </Compile>
