correction dossier XML,img et executable (oral)

--- a/Sources/WPF_App/WPF_App.csproj
+++ b/Sources/WPF_App/WPF_App.csproj
@@ -8,6 +8,10 @@
     <BaseOutputPath>..\MC-DexBin</BaseOutputPath>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <OutputPath>./</OutputPath>
+  </PropertyGroup>
+
   <ItemGroup>
     <None Remove="font\minecraft_font.ttf" />
     <None Remove="img\ajouter.png" />
